--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script defer src="js/weather.js"></script>
     <script defer src="js/placeholder.js"></script>
     <script defer src="js/sidebar.js"></script>
+    <script defer src="js/audio.js"></script>
   </head>
   <body>
     <div class="center-wrap">
@@ -47,5 +48,17 @@
         <ul class="js-toDoFinished"></ul>
       </div>
     </div>
+
+    <div class="audio-container">
+      <div class="onOff-wrap js-onOffWrap">
+        <div class="js-audioOnOff audioOnOff">♬ Play Music</div>
+      </div>
+      <div class="js-audioNextBtn audioNextBtn invisiable">⏯</div>
+    </div>
+    <!-- <iframe src="audio/0.mp3" allow="autoplay" id="audio" style="display: none"></iframe>
+
+    <audio id="audio" autoplay>
+      <source src="audio/2.mp3" />
+    </audio> -->
   </body>
 </html>
