HTML,CSS,audio.js: 음악 갯수 표시

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
         <div class="js-audioOnOff audioOnOff">♬ Play Music</div>
       </div>
       <div class="js-audioNextBtn audioNextBtn invisiable">⏯</div>
+      <div class="audio-count js-audioNumDisplay invisiable">( <span class="js-audioNum">1</span> / 5 )</div>
     </div>
   </body>
 </html>
