--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         Your browser does not support the audio format.
       </audio>
       <div class="onOff-wrap js-onOffWrap">
-        <div class="js-audioOnOff audioOnOff">♬ Play Music</div>
+        <div class="js-audioOnOff audioOnOff">♬ Play BGM</div>
       </div>
       <div class="js-audioNextBtn audioNextBtn invisiable">⏯</div>
       <div class="audio-count js-audioNumDisplay invisiable">( <span class="js-audioNum">1</span> / 5 )</div>
