audio.js: audio timer 기능 추가

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
       <div class="onOff-wrap js-onOffWrap">
         <div class="js-audioOnOff audioOnOff">♬ Play BGM</div>
       </div>
+      <div class="js-audioTime">00:00</div>
       <div class="js-audioNextBtn audioNextBtn invisiable">⏯</div>
       <div class="audio-count js-audioNumDisplay invisiable">( <span class="js-audioNum">1</span> / 5 )</div>
     </div>
