style.css: clock h1 width값 줘서 흔들리지 않게 고정, clock.js: getDate 추가

--- a/index.html
+++ b/index.html
@@ -22,12 +22,18 @@
       </div>
 
       <div class="clock js-clock">
+        <h2>날짜</h2>
+        <h3>요일</h3>
         <h1>00:00</h1>
       </div>
 
       <div class="form-wrap">
         <form class="js-form form">
-          <input type="text" placeholder="what is your name?" class="name-input" />
+          <input
+            type="text"
+            placeholder="what is your name?"
+            class="name-input"
+          />
         </form>
         <h4 class="js-grettings grettings"></h4>
       </div>
@@ -59,7 +65,9 @@
       </div>
       <div class="js-audioTime">00:00</div>
       <div class="js-audioNextBtn audioNextBtn invisiable">⏯</div>
-      <div class="audio-count js-audioNumDisplay invisiable">( <span class="js-audioNum">1</span> / 5 )</div>
+      <div class="audio-count js-audioNumDisplay invisiable">
+        ( <span class="js-audioNum">1</span> / 5 )
+      </div>
     </div>
   </body>
 </html>
